--- a/angular-bookstore/package.json
+++ b/angular-bookstore/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "jw-angular-pagination": "^1.2.0",
     "ngx-spinner": "^10.0.1",
